force-app/main/default/objects/OfficeVisitRequest__c/OfficeVisitRequest__c.object-meta.xml
<CustomObject>
    <label>Office Visit Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Visit Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>