force-app/main/default/objects/OfficeVisitRequest__c/fields/Account_CAM__c.field-meta.xml
<CustomField>
    <fullName>Account_CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Office_Visit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>