force-app/main/default/objects/OfficeVisitRequest__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Office Visit Requests</relationshipLabel>
    <relationshipName>Office_Visit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>