force-app/main/default/objects/OfficeVisitRequest__c/fields/Brokerage_Firm__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Firm__c</fullName>
    <label>Brokerage Firm</label>
    <length>250</length>
    <type>Text</type>
</CustomField>