force-app/main/default/objects/OfficeVisitRequest__c/fields/Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner__c</fullName>
    <formula>Text(AccountId__r.Account_CAM_Owner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Owner</label>
    <type>Text</type>
</CustomField>