force-app/main/default/objects/OfficeVisitRequest__c/fields/Primary_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscription__c</fullName>
    <formula>CreatedBy.Contact.Primary_Subscription__r.SF_Subscription_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Subscription</label>
    <type>Text</type>
</CustomField>