force-app/main/default/objects/OfficeVisitRequest__c/fields/Subscription_Association__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Association</label>
    <referenceTo>Related_Association__c</referenceTo>
    <relationshipLabel>Office Visit Requests</relationshipLabel>
    <relationshipName>Office_Visit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>