force-app/main/default/objects/OfficeVisitRequest__c/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Office Visit Requests</relationshipLabel>
    <relationshipName>Office_Visit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>