force-app/main/default/objects/OfficeVisitRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>SubscriptionId__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>AccountId__c</columns>
    <columns>Campaign_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>